@@ -1,4 +1,4 @@
-.TH PCRE2JIT 3 "28 July 2014" "PCRE2 10.21"
+.TH PCRE2JIT 3 "14 November 2015" "PCRE2 10.21"
 .SH NAME
 PCRE2 - Perl-compatible regular expressions (revised API)
 .SH "PCRE2 JUST-IN-TIME COMPILER SUPPORT"
@@ -60,6 +60,12 @@ is passed to the JIT compiler, which turns it into machine code that executes
 much faster than the normal interpretive code, but yields exactly the same
 results. The returned value from \fBpcre2_jit_compile()\fP is zero on success,
 or a negative error code.
+.P
+There is a limit to the size of pattern that JIT supports, imposed by the size
+of machine stack that it uses. The exact rules are not documented because they
+may change at any time, in particular, when new optimizations are introduced.
+If a pattern is too big, a call to \fBpcre2_jit_compile()\fB returns
+PCRE2_ERROR_NOMEMORY.
 .P
 PCRE2_JIT_COMPLETE requests the JIT compiler to generate code for complete
 matches. If you want to run partial matches using the PCRE2_PARTIAL_HARD or
@@ -404,6 +410,6 @@ Cambridge, England.
 .rs
 .sp
 .nf
-Last updated: 28 July 2015
+Last updated: 14 November 2015
 Copyright (c) 1997-2015 University of Cambridge.
 .fi
